@@ -19,6 +19,7 @@ utils:
 address-edit: improvement for actions=decommisssion - extend interface (ethernet/vlan/loopback/tunnel) with add/removeIPv4address
 address-edit: new filter '(value string.regex /[SEARCH-STRING]/)'
 upload-config: extend in=api://[MGTM-IP]/panorama-pushed-config to download panorama pushed config
+rule-edit: introduce hip-profile for actions=display
 
 utils(under development):
 ike: new script to show all IKE/IPsec profile and config settings
